# case-study

./: index.html
task1/: case_study1.ipynb  pyproject.toml  wave.nc
