[tool.poetry]
name = "case_study"
version = "0.1.0"
description = ""
authors = ["Min Shi <min.shi@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
requests = "^2.25.1"
xarray = "^0.16.2"
netcdf4 = "^1.5.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
